* use router to render the main page * add Node Test Runner unit tests * use LinkeDOM to render components and simulate event handling on the server side for unit testing purposes * Remove dummy, demo route (App.route.js)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Kung Fu and Javascript</title>
   </head>
   <body>
-    <blog-app></blog-app>
+    <div id="app"></div>
 
     <script type="module" src="/main.js"></script>
   </body>
